Fix Docker setup: Add PostgreSQL database and production API config

--- a/.env.docker
+++ b/.env.docker
@@ -2,3 +2,4 @@
 # Copy this to .env and update with your values
 
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+POSTGRES_PASSWORD=rewear123
