--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -11,7 +11,10 @@ RUN npm ci
 # Copy frontend source
 COPY frontend/ ./
 
-# Build the app
+# Copy production environment
+COPY frontend/.env.production .env.production
+
+# Build the app for production
 RUN npm run build
 
 # Production stage
