--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,24 @@
 version: '3.8'
 
 services:
+  postgres:
+    image: postgres:15-alpine
+    container_name: rewear-postgres
+    environment:
+      - POSTGRES_USER=rewear
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-rewear123}
+      - POSTGRES_DB=rewear
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    restart: unless-stopped
+    networks:
+      - rewear-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U rewear"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   backend:
     build:
       context: .
@@ -12,13 +30,15 @@ services:
       - NODE_ENV=production
       - PORT=5000
       - JWT_SECRET=${JWT_SECRET:-your-super-secret-jwt-key-change-this}
-      - DATABASE_URL=sqlite://./database.sqlite
+      - DATABASE_URL=postgresql://rewear:${POSTGRES_PASSWORD:-rewear123}@postgres:5432/rewear
       - CORS_ORIGIN=http://localhost:3000
       - MAX_FILE_SIZE=5242880
       - UPLOAD_PATH=/uploads
     volumes:
       - ./uploads:/uploads
-      - backend-data:/app
+    depends_on:
+      postgres:
+        condition: service_healthy
     restart: unless-stopped
     networks:
       - rewear-network
@@ -37,7 +57,7 @@ services:
       - rewear-network
 
 volumes:
-  backend-data:
+  postgres-data:
 
 networks:
   rewear-network:
