--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Images
+name: Build and Push Docker Image
 
 on:
   push:
@@ -21,26 +21,14 @@ jobs:
         run: |
           echo "${{ secrets.DOCKER_PAT }}" | docker login -u fighterkeshav7 --password-stdin
 
-      - name: Build and push backend image
+      - name: Build and push unified image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.backend
+          file: ./Dockerfile
           push: true
           tags: |
-            fighterkeshav7/rewear-backend:latest
-            fighterkeshav7/rewear-backend:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Build and push frontend image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile.frontend
-          push: true
-          tags: |
-            fighterkeshav7/rewear-frontend:latest
-            fighterkeshav7/rewear-frontend:${{ github.sha }}
+            fighterkeshav7/rewear:latest
+            fighterkeshav7/rewear:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
