--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,8 +18,10 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        run: |
-          echo "${{ secrets.DOCKER_PAT }}" | docker login -u fighterkeshav7 --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push unified image
         uses: docker/build-push-action@v5
@@ -28,7 +30,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            fighterkeshav7/rewear:latest
-            fighterkeshav7/rewear:${{ github.sha }}
+            ${{ secrets.DOCKER_USERNAME }}/rewear:latest
+            ${{ secrets.DOCKER_USERNAME }}/rewear:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
