Add default environment variables and improve deployment startup

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -19,7 +19,7 @@ autostart=true
 autorestart=true
 stdout_logfile=/var/log/supervisor/backend.log
 stderr_logfile=/var/log/supervisor/backend_err.log
-environment=NODE_ENV="production",PORT="5000",DATABASE_URL="postgresql://rewear:rewear123@localhost:5432/rewear",JWT_SECRET="%(ENV_JWT_SECRET)s",UPLOAD_PATH="/uploads"
+environment=NODE_ENV="production",PORT="5000",DATABASE_URL="postgresql://rewear:rewear123@localhost:5432/rewear",JWT_SECRET="%(ENV_JWT_SECRET)s",UPLOAD_PATH="/uploads",CORS_ORIGIN="*",MAX_FILE_SIZE="5242880"
 
 [program:nginx]
 command=/usr/sbin/nginx -g 'daemon off;'
