--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,21 +9,31 @@ command=/usr/bin/postgres -D /var/lib/postgresql/data
 user=postgres
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/supervisor/postgres.log
-stderr_logfile=/var/log/supervisor/postgres_err.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+priority=1
 
 [program:backend]
-command=node /app/backend/server.js
+command=/backend-start.sh
 directory=/app/backend
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/supervisor/backend.log
-stderr_logfile=/var/log/supervisor/backend_err.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 environment=NODE_ENV="production",PORT="5000",DATABASE_URL="postgresql://rewear:rewear123@localhost:5432/rewear",JWT_SECRET="%(ENV_JWT_SECRET)s",UPLOAD_PATH="/uploads",CORS_ORIGIN="*",MAX_FILE_SIZE="5242880"
+startsecs=3
+startretries=10
 
 [program:nginx]
 command=/usr/sbin/nginx -g 'daemon off;'
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/supervisor/nginx.log
-stderr_logfile=/var/log/supervisor/nginx_err.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+priority=999
