Make Google OAuth optional and add Render deployment guide

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -24,7 +24,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-environment=NODE_ENV="production",PORT="5000",DATABASE_URL="postgresql://rewear:rewear123@localhost:5432/rewear",JWT_SECRET="%(ENV_JWT_SECRET)s",UPLOAD_PATH="/uploads",CORS_ORIGIN="*",MAX_FILE_SIZE="5242880"
+environment=NODE_ENV="production",PORT="5000",DATABASE_URL="postgresql://rewear:rewear123@localhost:5432/rewear",JWT_SECRET="%(ENV_JWT_SECRET)s",UPLOAD_PATH="/uploads",CORS_ORIGIN="*",MAX_FILE_SIZE="5242880",GOOGLE_CLIENT_ID="%(ENV_GOOGLE_CLIENT_ID)s",GOOGLE_CLIENT_SECRET="%(ENV_GOOGLE_CLIENT_SECRET)s",GOOGLE_CALLBACK_URL="%(ENV_GOOGLE_CALLBACK_URL)s"
 startsecs=3
 startretries=10
 
