Add runtime config injection for Google OAuth in frontend

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -37,3 +37,4 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=999
+environment=GOOGLE_CLIENT_ID="%(ENV_GOOGLE_CLIENT_ID)s"
