--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,9 +7,17 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 # Server Port (optional, defaults to 5000)
 PORT=5000
 
-# Database Configuration (SQLite is used by default)
-# For production, you might want to use PostgreSQL
-DATABASE_URL=sqlite://./database.sqlite
+# Database Configuration
+# Local development (SQLite)
+# DATABASE_URL=sqlite://./database.sqlite
+
+# Production (PostgreSQL - AWS RDS)
+DATABASE_URL=postgresql://postgres:your-password@your-rds-endpoint.region.rds.amazonaws.com:5432/postgres
+
+# Google OAuth (optional)
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_CALLBACK_URL=http://localhost:5000/api/auth/google/callback
 
 # File Upload Configuration
 MAX_FILE_SIZE=5242880
