--- a/backend/package.json
+++ b/backend/package.json
@@ -30,8 +30,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.0",
-    "sqlite3": "^5.1.7"
+    "sequelize": "^6.35.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
