--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=/api
+REACT_APP_API_URL=https://rewear-backend.onrender.com
+REACT_APP_GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID_HERE
